@startuml
'https://plantuml.com/class-diagram

class Ship {
-mmsiCode
-imoCode
-numberEnergyGenerators
-generatorPower
-callSign
-draft
-name
-vesselTypeId
-length
-width
-capacity
}



class Ports {
-identification
-name
}

class Containers {
-x
-y
-z
-containerNumber
-checkDigit
-isoCode
-payLoad
-tare
-gross
-weight
}

class CargoManifest {
-containerNumber
}

Ship "0..*"--"1" Ports: dock >
Ship "1"---"1..*" Containers : transport >
CargoManifest "*" -- "1" Ports : delivered at >
Containers "0..*"--"1" Ports: store >
Containers "1..*"--"1..*" CargoManifest: related to >


@enduml